Aldaketak php-tan

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,74 @@
             "database": "webapp",
             "username": "root"
         }
+    ],
+    "cSpell.ignoreWords": [
+        "Abizena",
+        "Apellido",
+        "Cerrar",
+        "Conexión",
+        "Contraseña",
+        "Elektronikoa",
+        "Erabiltzailea",
+        "Erregistratu",
+        "Errorea",
+        "Harremana",
+        "Hasi",
+        "Hasiera",
+        "Izena",
+        "Kategoriak",
+        "Klaseak",
+        "Kokapena",
+        "Konexioa",
+        "Kontua",
+        "Korreoa",
+        "Lehiaketak",
+        "Nombre",
+        "Pasahitza",
+        "Posta",
+        "Preparar",
+        "Recoger",
+        "Saioa",
+        "Sartu",
+        "Telefono",
+        "Telefonoa",
+        "Teléfono",
+        "Verificar",
+        "abizena",
+        "arte",
+        "conexión",
+        "consulta",
+        "contrasena",
+        "datos",
+        "duzu",
+        "ejecutar",
+        "enviado",
+        "erabiiltzaile",
+        "fallida",
+        "formulario",
+        "galdu",
+        "gorde",
+        "guriburuz",
+        "hasiera",
+        "headerra",
+        "headerren",
+        "hemen",
+        "insertar",
+        "izena",
+        "kategoriak",
+        "kontainerra",
+        "kontaktua",
+        "korreoa",
+        "lantaldea",
+        "lehiaketak",
+        "martzialak",
+        "ongi",
+        "pasahitza",
+        "progila",
+        "registro",
+        "saioahasi",
+        "servername",
+        "telefonoa",
+        "verificamos"
     ]
 }
