--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,9 @@
         "Elektronikoa",
         "Erabiltzailea",
         "Erregistratu",
+        "Erregistroa",
         "Errorea",
+        "Formularioaren",
         "Harremana",
         "Hasi",
         "Hasiera",
@@ -36,6 +38,7 @@
         "Korreoa",
         "Lehiaketak",
         "Nombre",
+        "Número",
         "Pasahitza",
         "Posta",
         "Preparar",
@@ -46,25 +49,32 @@
         "Telefonoa",
         "Teléfono",
         "Verificar",
+        "Zenbakia",
         "abizena",
         "arte",
         "conexión",
         "consulta",
         "contrasena",
         "datos",
+        "datu",
         "duzu",
         "ejecutar",
         "enviado",
         "erabiiltzaile",
+        "erregistroa",
         "fallida",
         "formulario",
         "galdu",
         "gorde",
+        "guburuz",
         "guriburuz",
+        "guztik",
+        "hamburguesa",
         "hasiera",
         "headerra",
         "headerren",
         "hemen",
+        "icono",
         "insertar",
         "izena",
         "kategoriak",
@@ -74,8 +84,12 @@
         "lantaldea",
         "lehiaketak",
         "martzialak",
+        "menua",
+        "navegazio",
         "ongi",
         "pasahitza",
+        "pestaña",
+        "profila",
         "progila",
         "registro",
         "saioahasi",
