--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,53 +17,145 @@
     "cSpell.ignoreWords": [
         "Abizena",
         "Apellido",
+        "Aquí",
+        "Bidezko",
         "Cerrar",
+        "Cierra",
         "Conexión",
         "Contraseña",
+        "Credenciales",
+        "Definir",
         "Elektronikoa",
+        "Emaitza",
+        "Emaitzak",
+        "Erabiltzaile",
         "Erabiltzailea",
         "Erregistratu",
         "Erregistroa",
         "Errorea",
+        "Formularioa",
         "Formularioaren",
+        "Función",
+        "Gure",
         "Harremana",
         "Hasi",
         "Hasiera",
+        "Inicio",
+        "Inserta",
+        "Inskripzioa",
         "Izena",
+        "JITSU",
         "Kategoriak",
+        "Klase",
         "Klaseak",
         "Kokapena",
         "Konexioa",
+        "Konexioak",
+        "Kontsulta",
         "Kontua",
         "Korreoa",
+        "Kredentzial",
+        "Kredentzialak",
+        "Kurtoak",
+        "Kurtsoak",
         "Lehiaketak",
+        "Martzial",
+        "Matrikulatu",
+        "Neque",
         "Nombre",
         "Número",
+        "Obtener",
+        "Ordua",
         "Pasahitza",
         "Posta",
         "Preparar",
+        "Puedes",
+        "Quidem",
         "Recoger",
+        "Redirigir",
         "Saioa",
+        "Sanitiza",
         "Sartu",
+        "Sekzioa",
         "Telefono",
         "Telefonoa",
         "Teléfono",
+        "Tolosako",
+        "Totam",
+        "Usuario",
+        "Utiliza",
+        "Valida",
+        "Validar",
         "Verificar",
         "Zenbakia",
         "abizena",
+        "accusantium",
+        "adipisicing",
+        "amet",
+        "aplicar",
+        "aquí",
+        "architecto",
+        "areapersonal",
         "arte",
+        "askatu",
+        "aukeratu",
+        "aurkitu",
+        "autem",
+        "basearekin",
+        "batekin",
+        "beste",
+        "bidali",
+        "bidea",
+        "bidezko",
+        "botoiak",
+        "buruz",
+        "caracteres",
+        "commodi",
         "conexión",
+        "consectetur",
+        "consequuntur",
         "consulta",
         "contrasena",
+        "credenciales",
         "datos",
         "datu",
+        "datuak",
+        "debe",
+        "delectus",
+        "deleniti",
+        "deskripzioa",
+        "después",
+        "diren",
+        "doloribus",
+        "ducimus",
         "duzu",
+        "egiaztatu",
+        "egiaztatzeko",
+        "egin",
         "ejecutar",
+        "elija",
+        "elit",
+        "encabezado",
+        "entrada",
         "enviado",
+        "enviados",
         "erabiiltzaile",
+        "erabilgarri",
+        "erdiak",
         "erregistroa",
+        "están",
+        "estén",
+        "eveniet",
+        "evitar",
+        "exekutatu",
+        "existe",
+        "exitosamente",
+        "exitoso",
+        "ezarri",
+        "ezberdinak",
         "fallida",
         "formulario",
+        "fugiat",
         "galdu",
         "gorde",
         "guburuz",
@@ -75,26 +167,98 @@
         "headerren",
         "hemen",
         "icono",
+        "impedit",
+        "incorrectas",
+        "indarra",
+        "ingrese",
+        "inicio",
         "insertar",
+        "inténtalo",
+        "inyección",
+        "ipsam",
+        "irudia",
+        "irudiak",
+        "itxi",
+        "itzazu",
+        "iure",
+        "iusto",
         "izena",
+        "jaso",
         "kategoriak",
+        "kirol",
+        "klasea",
         "kontainerra",
         "kontaktua",
+        "kontsulta",
         "korreoa",
         "lantaldea",
         "lehiaketak",
+        "limpiar",
+        "limpiarlos",
+        "longitud",
+        "maiores",
+        "marcial",
+        "martzial",
         "martzialak",
+        "menos",
+        "mensaje",
         "menua",
+        "mostrar",
         "navegazio",
+        "nobis",
+        "nuevo",
+        "odio",
+        "odit",
+        "okerra",
+        "okerrak",
         "ongi",
+        "optio",
+        "otro",
+        "pasahitz",
         "pasahitza",
+        "pertsonalak",
         "pestaña",
+        "podrías",
+        "preparada",
+        "prestatu",
+        "prezioa",
+        "procesar",
         "profila",
         "progila",
+        "propio",
+        "página",
+        "quibusdam",
+        "redirigir",
+        "registrado",
         "registro",
+        "rellena",
+        "repellat",
+        "reprehenderit",
+        "rerum",
         "saioahasi",
+        "segundos",
+        "seguro",
+        "sekzioa",
         "servername",
+        "sesión",
+        "sortuta",
+        "taldea",
         "telefonoa",
-        "verificamos"
+        "tempora",
+        "tener",
+        "tituloa",
+        "todos",
+        "usuario",
+        "utilizando",
+        "vacíos",
+        "valida",
+        "valores",
+        "verificamos",
+        "visioa",
+        "voluptatem",
+        "voluptatibus",
+        "válidas",
+        "válidos",
+        "área"
     ]
 }
