Pribatua gehitu da

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,27 +19,41 @@
         "Apellido",
         "Aquí",
         "Bidezko",
+        "Borrokalaria",
+        "Cambiar",
+        "Cambios",
         "Cerrar",
         "Cierra",
         "Conexión",
         "Contraseña",
         "Credenciales",
         "Definir",
+        "Dirección",
         "Elektronikoa",
         "Emaitza",
         "Emaitzak",
         "Erabiltzaile",
         "Erabiltzailea",
+        "Errasti",
         "Erregistratu",
         "Erregistroa",
         "Errorea",
+        "Estilos",
+        "Fecha",
         "Formularioa",
         "Formularioaren",
         "Función",
+        "Guardar",
         "Gure",
+        "Guri",
         "Harremana",
         "Hasi",
         "Hasiera",
+        "Helbidea",
+        "Herria",
+        "Herrialdea",
+        "Iker",
+        "Ingresa",
         "Inicio",
         "Inserta",
         "Inskripzioa",
@@ -48,10 +62,12 @@
         "Kategoriak",
         "Klase",
         "Klaseak",
+        "Kodea",
         "Kokapena",
         "Konexioa",
         "Konexioak",
         "Kontsulta",
+        "Kontu",
         "Kontua",
         "Korreoa",
         "Kredentzial",
@@ -66,17 +82,27 @@
         "Número",
         "Obtener",
         "Ordua",
+        "Pagos",
         "Pasahitza",
+        "Peio",
+        "Personales",
+        "Pisua",
         "Posta",
         "Preparar",
+        "Pribatua",
+        "Privada",
+        "Probintzia",
         "Puedes",
         "Quidem",
         "Recoger",
         "Redirigir",
+        "Resultados",
         "Saioa",
         "Sanitiza",
         "Sartu",
         "Sekzioa",
+        "Sexo",
+        "Sexua",
         "Telefono",
         "Telefonoa",
         "Teléfono",
@@ -88,9 +114,13 @@
         "Validar",
         "Verificar",
         "Zenbakia",
+        "Zure",
         "abizena",
         "accusantium",
+        "adicionales",
         "adipisicing",
+        "agregar",
+        "agregarse",
         "amet",
         "aplicar",
         "aquí",
@@ -112,11 +142,14 @@
         "caracteres",
         "commodi",
         "conexión",
+        "confirmación",
         "consectetur",
         "consequuntur",
         "consulta",
+        "contenido",
         "contrasena",
         "credenciales",
+        "código",
         "datos",
         "datu",
         "datuak",
@@ -125,6 +158,8 @@
         "deleniti",
         "deskripzioa",
         "después",
+        "direccion",
+        "dirección",
         "diren",
         "doloribus",
         "ducimus",
@@ -133,12 +168,14 @@
         "egiaztatzeko",
         "egin",
         "ejecutar",
+        "ejemplo",
         "elija",
         "elit",
         "encabezado",
         "entrada",
         "enviado",
         "enviados",
+        "enviar",
         "erabiiltzaile",
         "erabilgarri",
         "erdiak",
@@ -154,6 +191,8 @@
         "ezarri",
         "ezberdinak",
         "fallida",
+        "fecha",
+        "filas",
         "formulario",
         "fugiat",
         "galdu",
@@ -173,6 +212,7 @@
         "ingrese",
         "inicio",
         "insertar",
+        "interacción",
         "inténtalo",
         "inyección",
         "ipsam",
@@ -187,24 +227,31 @@
         "kategoriak",
         "kirol",
         "klasea",
+        "kodea",
         "kontainerra",
         "kontaktua",
         "kontsulta",
+        "kontu",
         "korreoa",
+        "korrontea",
         "lantaldea",
         "lehiaketak",
         "limpiar",
         "limpiarlos",
         "longitud",
         "maiores",
+        "manejar",
         "marcial",
         "martzial",
         "martzialak",
+        "mediante",
         "menos",
         "mensaje",
         "menua",
         "mostrar",
+        "nacimiento",
         "navegazio",
+        "necesario",
         "nobis",
         "nuevo",
         "odio",
@@ -214,8 +261,10 @@
         "ongi",
         "optio",
         "otro",
+        "pagos",
         "pasahitz",
         "pasahitza",
+        "personales",
         "pertsonalak",
         "pestaña",
         "podrías",
@@ -226,20 +275,25 @@
         "profila",
         "progila",
         "propio",
+        "pueden",
         "página",
         "quibusdam",
         "redirigir",
         "registrado",
         "registro",
+        "relacionado",
         "rellena",
         "repellat",
         "reprehenderit",
         "rerum",
+        "resultados",
         "saioahasi",
         "segundos",
         "seguro",
+        "según",
         "sekzioa",
         "servername",
+        "servidor",
         "sesión",
         "sortuta",
         "taldea",
@@ -248,6 +302,7 @@
         "tener",
         "tituloa",
         "todos",
+        "usar",
         "usuario",
         "utilizando",
         "vacíos",
