PHP funtzioantzen dute

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,17 +16,26 @@
     ],
     "cSpell.ignoreWords": [
         "Abizena",
+        "Almería",
         "Apellido",
         "Aquí",
+        "Balears",
         "Bidezko",
         "Borrokalaria",
         "Cambiar",
         "Cambios",
+        "Cantabria",
+        "Castellón",
         "Cerrar",
         "Cierra",
+        "Ciudad",
+        "Comprobar",
         "Conexión",
         "Contraseña",
+        "Coruña",
         "Credenciales",
+        "Cáceres",
+        "Cádiz",
         "Definir",
         "Dirección",
         "Elektronikoa",
@@ -38,12 +47,16 @@
         "Erregistratu",
         "Erregistroa",
         "Errorea",
+        "Establecer",
         "Estilos",
+        "Ezin",
         "Fecha",
         "Formularioa",
         "Formularioaren",
         "Función",
+        "Girona",
         "Guardar",
+        "Guipúzcoa",
         "Gure",
         "Guri",
         "Harremana",
@@ -52,13 +65,16 @@
         "Helbidea",
         "Herria",
         "Herrialdea",
+        "Huesca",
         "Iker",
+        "Illes",
         "Ingresa",
         "Inicio",
         "Inserta",
         "Inskripzioa",
         "Izena",
         "JITSU",
+        "Jaén",
         "Kategoriak",
         "Klase",
         "Klaseak",
@@ -75,18 +91,27 @@
         "Kurtoak",
         "Kurtsoak",
         "Lehiaketak",
+        "León",
+        "Liberar",
+        "Lleida",
         "Martzial",
         "Matrikulatu",
+        "Melilla",
+        "Málaga",
         "Neque",
         "Nombre",
         "Número",
         "Obtener",
         "Ordua",
+        "Ourense",
         "Pagos",
+        "Palencia",
+        "Palmas",
         "Pasahitza",
         "Peio",
         "Personales",
         "Pisua",
+        "Pontevedra",
         "Posta",
         "Preparar",
         "Pribatua",
@@ -94,25 +119,33 @@
         "Probintzia",
         "Puedes",
         "Quidem",
+        "Recoge",
         "Recoger",
         "Redirigir",
         "Resultados",
+        "Rioja",
         "Saioa",
         "Sanitiza",
         "Sartu",
         "Sekzioa",
+        "Sevilla",
         "Sexo",
         "Sexua",
+        "Soria",
         "Telefono",
         "Telefonoa",
         "Teléfono",
+        "Terminar",
+        "Teruel",
         "Tolosako",
         "Totam",
         "Usuario",
         "Utiliza",
         "Valida",
         "Validar",
+        "Verifica",
         "Verificar",
+        "Zaragoza",
         "Zenbakia",
         "Zure",
         "abizena",
@@ -133,11 +166,15 @@
         "autem",
         "basearekin",
         "batekin",
+        "batzuk",
         "beste",
         "bidali",
         "bidea",
         "bidezko",
+        "bloque",
         "botoiak",
+        "burutu",
+        "burutzeko",
         "buruz",
         "caracteres",
         "commodi",
@@ -148,7 +185,10 @@
         "consulta",
         "contenido",
         "contrasena",
+        "crea",
         "credenciales",
+        "cuando",
+        "cuenta",
         "código",
         "datos",
         "datu",
@@ -158,6 +198,7 @@
         "deleniti",
         "deskripzioa",
         "después",
+        "dira",
         "direccion",
         "dirección",
         "diren",
@@ -167,11 +208,14 @@
         "egiaztatu",
         "egiaztatzeko",
         "egin",
+        "ejecución",
         "ejecutar",
         "ejemplo",
         "elija",
         "elit",
         "encabezado",
+        "encontraron",
+        "enfoque",
         "entrada",
         "enviado",
         "enviados",
@@ -180,6 +224,7 @@
         "erabilgarri",
         "erdiak",
         "erregistroa",
+        "establecer",
         "están",
         "estén",
         "eveniet",
@@ -191,9 +236,11 @@
         "ezarri",
         "ezberdinak",
         "fallida",
+        "falta",
         "fecha",
         "filas",
         "formulario",
+        "fuera",
         "fugiat",
         "galdu",
         "gorde",
@@ -222,6 +269,7 @@
         "itzazu",
         "iure",
         "iusto",
+        "izan",
         "izena",
         "jaso",
         "kategoriak",
@@ -243,6 +291,7 @@
         "manejar",
         "marcial",
         "martzial",
+        "martziala",
         "martzialak",
         "mediante",
         "menos",
@@ -269,6 +318,7 @@
         "pestaña",
         "podrías",
         "preparada",
+        "presentes",
         "prestatu",
         "prezioa",
         "procesar",
@@ -278,6 +328,7 @@
         "pueden",
         "página",
         "quibusdam",
+        "redirección",
         "redirigir",
         "registrado",
         "registro",
@@ -285,7 +336,9 @@
         "rellena",
         "repellat",
         "reprehenderit",
+        "requeridos",
         "rerum",
+        "resultado",
         "resultados",
         "saioahasi",
         "segundos",
@@ -302,6 +355,9 @@
         "tener",
         "tituloa",
         "todos",
+        "tunombredehost",
+        "tunombredeusuario",
+        "tupassword",
         "usar",
         "usuario",
         "utilizando",
@@ -314,6 +370,9 @@
         "voluptatibus",
         "válidas",
         "válidos",
+        "zona",
+        "Álava",
+        "Ávila",
         "área"
     ]
 }
