--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
     ],
     "cSpell.ignoreWords": [
         "Abizena",
+        "Aldatu",
         "Almería",
         "Apellido",
         "Aquí",
@@ -74,6 +75,7 @@
         "Inskripzioa",
         "Izena",
         "JITSU",
+        "Jaiotze",
         "Jaén",
         "Kategoriak",
         "Klase",
@@ -271,6 +273,7 @@
         "iusto",
         "izan",
         "izena",
+        "jaiotze",
         "jaso",
         "kategoriak",
         "kirol",
