Pribatua.php igo da

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,8 @@
         "Apellido",
         "Aquí",
         "Balears",
+        "Bazkidea",
+        "Berriak",
         "Bidezko",
         "Borrokalaria",
         "Cambiar",
@@ -48,13 +50,16 @@
         "Erregistratu",
         "Erregistroa",
         "Errorea",
+        "España",
         "Establecer",
+        "Estekak",
         "Estilos",
         "Ezin",
         "Fecha",
         "Formularioa",
         "Formularioaren",
         "Función",
+        "Gipuzkoa",
         "Girona",
         "Guardar",
         "Guipúzcoa",
@@ -77,6 +82,7 @@
         "JITSU",
         "Jaiotze",
         "Jaén",
+        "KOBAZ",
         "Kategoriak",
         "Klase",
         "Klaseak",
@@ -84,6 +90,7 @@
         "Kokapena",
         "Konexioa",
         "Konexioak",
+        "Kontaktuak",
         "Kontsulta",
         "Kontu",
         "Kontua",
@@ -96,6 +103,7 @@
         "León",
         "Liberar",
         "Lleida",
+        "Luzia",
         "Martzial",
         "Matrikulatu",
         "Melilla",
@@ -124,6 +132,7 @@
         "Recoge",
         "Recoger",
         "Redirigir",
+        "Repite",
         "Resultados",
         "Rioja",
         "Saioa",
@@ -139,6 +148,7 @@
         "Teléfono",
         "Terminar",
         "Teruel",
+        "Tolosa",
         "Tolosako",
         "Totam",
         "Usuario",
@@ -151,6 +161,7 @@
         "Zenbakia",
         "Zure",
         "abizena",
+        "aboutus",
         "accusantium",
         "adicionales",
         "adipisicing",
@@ -166,6 +177,7 @@
         "aukeratu",
         "aurkitu",
         "autem",
+        "azkarrak",
         "basearekin",
         "batekin",
         "batzuk",
@@ -189,6 +201,7 @@
         "contrasena",
         "crea",
         "credenciales",
+        "criterio",
         "cuando",
         "cuenta",
         "código",
@@ -198,6 +211,8 @@
         "debe",
         "delectus",
         "deleniti",
+        "demás",
+        "desees",
         "deskripzioa",
         "después",
         "dira",
@@ -226,6 +241,7 @@
         "erabilgarri",
         "erdiak",
         "erregistroa",
+        "eskola",
         "establecer",
         "están",
         "estén",
@@ -238,6 +254,7 @@
         "ezarri",
         "ezberdinak",
         "fallida",
+        "falló",
         "falta",
         "fecha",
         "filas",
@@ -301,6 +318,7 @@
         "mensaje",
         "menua",
         "mostrar",
+        "mydb",
         "nacimiento",
         "navegazio",
         "necesario",
@@ -313,6 +331,7 @@
         "ongi",
         "optio",
         "otro",
+        "ourteam",
         "pagos",
         "pasahitz",
         "pasahitza",
@@ -325,6 +344,7 @@
         "prestatu",
         "prezioa",
         "procesar",
+        "proceso",
         "profila",
         "progila",
         "propio",
